# windows-est-clock

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  LICENSE  Path.md  README.md  build.bat  create_release.bat  fix_permissions.bat  fix_release_notes.bat  fix_release_scripts.bat  fix_version_final.bat  fix_version_validation.bat  main.cpp  resource.h  resource.rc
.github/: PULL_REQUEST_TEMPLATE.md
.github/DISCUSSION_TEMPLATE/: welcome.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  main.yml  pull-request.yml  release.yml
action_logs/: 0_build.txt
docs/: ARCHITECTURE.md  VERSIONING.md
docs/images/: README.md
include/: time_conversion.h
tests/: CMakeLists.txt  README.md  globals.cpp  globals.h  privilege_helper.h  run_tests_with_resync.bat  run_tests_with_resync.ps1  system_time_zone_tests.cpp  time_conversion_mock.cpp  time_conversion_tests.cpp  time_zone_conversion_tests.cpp
